# note-taking-api

./: README.md  notes.db  pyproject.toml
app/: db.py  dependencies.py  main.py  models.py
app/interfaces/: grammar_checker.py  markdown_renderer.py  storage_handler.py  user_manager.py
app/repositories/: file_storage_repository.py
app/routers/: notes.py
app/schemas/: errors_schema.py  grammar_schema.py  note_schema.py
app/services/: file_upload_service.py  grammar_service.py  markdown_service.py  note_service.py  user_service.py
app/utils/: cache_redis.py  caching_in_memory.py  generate_cache_key.py  language_code.py  note_util.py
